# ml_project_template

./: .gitignore  .pre-commit-config.yaml  Brewfile  README.md  SECURITY.md  dvc.yaml  pyproject.toml  requirements.txt
.github/workflows/: codeql.yml  pr-title.yml  release.yml  testing.yml
docs/: README.md
