[tool.poetry]
name = "ml_project_template"
version = "0.1.0"
description = "This project can be used as a template for a Python machine learning project."
authors = ["Your Name <you@example.com>"]
packages = [{ include = "ml_project_template", from = "src" }]
readme = "docs/README.md"
documentation = ""
repository = "https://github.com/invia-flights/ml_project_template"

classifiers = [
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Intended Audience :: Science/Research",
]
keywords = [
    "python",
    "machine learning",
    "data science"
]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"

dask = "^2022.12.1"
dask-ml = "^2022.5.27"
fastparquet = "^2022.12.0"
joblib = "^1.2.0"
pandas = "^1.5.2"
numpy = "1.23.5"
sk-transformers = "^0.6.3"
scikit-learn = "^1.2.0"
typer = "^0.7.0"

[tool.poetry.group.research.dependencies]
blitzly = "^0.3.3"
matplotlib = "^3.6.2"
pandas-profiling = "^3.6.2"


[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^22.12.0"}
bandit = "^1.7.4"
ipykernel = "^6.20.1"
isort = "^5.11.4"
mypy = "^0.991"
pylint = "^2.15.9"
pre-commit = "^2.21.0"
nbstripout = "^0.6.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[tool.poetry.group.dev]
optional = false

[tool.poetry.group.research]
optional = false

[tool.poetry.group.test]
optional = true

[build-system]
requires = ["poetry-core>=1.4.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.messages_control]
disable = [
    "C0301",
    "C0103",
    "C0114",
    "E0401",
    "R0913",
    "R0914",
    "R0916",
    ]

[tool.pylint.format]
max-line-length = 88

[tool.mypy]
strict = true
disallow_subclassing_any = false
ignore_missing_imports = true
disallow_any_generics = false
warn_return_any = false
no_namespace_packages = true
exclude = ["tests", "docs", "data", "models"]

[tool.black]
target-version = ['py311']


[tool.isort]
profile = "black"
skip_glob = ["docs/*", "data/*", "models/*"]
src_paths = ["src/ml_project_template", "research", "tests"]
extend_skip = [".md", ".yaml", ".yml"]
